fix: bottom sheet jump on close

--- a/apps/app/src/components/BottomSheet/BottomSheet.css
+++ b/apps/app/src/components/BottomSheet/BottomSheet.css
@@ -7,9 +7,6 @@
     transition: 200ms ease-in;
   }
 
-  &-exit > .sheet {
-    transform: translateY(0%);
-  }
   &-exit-active > .sheet {
     transform: translateY(100%);
     transition: 200ms ease-in;
